--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -3,10 +3,15 @@
   "appTitle": "Fridge Manager",
   "productsPageNavigationBarLabel": "Products",
   "overviewPageNavigationBarLabel": "Overview",
-  "recipesPageNavigationBarLabel": "Recepies",
-  "nothingToSeeHereYet": "Nothing to see here yet!",
+  "recipesPageNavigationBarLabel": "Recipes",
+  "productsAppBarTitle": "Products",
+  "overviewAppBarTitle": "Fridge Manager",
+  "recipesAppBarTitle": "Recipes",
+  "productsErrorSnackbarText": "An error occurred while loading todos.",
+  "productsEmptyView": "No todos found with the selected filters.",
   "productsPageLink": "Products Page",
-  "overviewAppBarTitle": "Overview",
-  "overviewErrorSnackbarText": "An error occurred while loading todos.",
-  "overviewEmptyView": "No todos found with the selected filters."
+  "nothingToSeeHereYet": "Nothing to see here yet!",
+  "editProductAddAppBarTitle": "Add Product",
+  "editProductEditAppBarTitle": "Edit Product",
+  "editProductSaveButtonTooltip": "Save Product"
 }
